--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,10 +1,73 @@
 body {
   margin: 0;
-  font-family:  'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family:  'Graphik', 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@font-face {
+  font-family: 'Graphik';
+  font-style: 'light';
+  font-weight: 100;
+  src: url('./fonts/Graphik-100-Thin.otf');
+}
+
+@font-face {
+  font-family: 'Graphik';
+  font-style: 'light';
+  font-weight: 200;
+  src: url('./fonts/Graphik-200-Extralight.otf');
+}
+
+@font-face {
+  font-family: 'Graphik';
+  font-style: 'light';
+  font-weight: 300;
+  src: url('./fonts/Graphik-300-Light.otf');
+}
+
+@font-face {
+  font-family: 'Graphik';
+  font-style: 'light';
+  font-weight: 400;
+  src: url('./fonts/Graphik-400-Regular.otf');
+}
+
+@font-face {
+  font-family: 'Graphik';
+  font-style: 'light';
+  font-weight: 500;
+  src: url('./fonts/Graphik-500-Medium.otf');
+}
+
+@font-face {
+  font-family: 'Graphik';
+  font-style: 'light';
+  font-weight: 600;
+  src: url('./fonts/Graphik-600-Semibold.otf');
+}
+
+@font-face {
+  font-family: 'Graphik';
+  font-style: 'light';
+  font-weight: 700;
+  src: url('./fonts/Graphik-700-Bold.otf');
+}
+
+@font-face {
+  font-family: 'Graphik';
+  font-style: 'light';
+  font-weight: 800;
+  src: url('./fonts/Graphik-800-Black.otf');
+}
+
+@font-face {
+  font-family: 'Graphik';
+  font-style: 'light';
+  font-weight: 900;
+  src: url('./fonts/Graphik-900-Super.otf');
 }
 
 @font-face {
